src/tests/routes/crates/snapshots/all__routes__crates__list__invalid_params_with_null_bytes-4.snap
---
source: src/tests/routes/crates/list.rs
expression: response.json()
---
{
  "errors": [
    {
      "detail": "parameter keyword cannot contain a null byte"
    }
  ]
}
