src/tests/routes/crates/snapshots/all__routes__crates__list__invalid_seek_parameter.snap
---
source: src/tests/routes/crates/list.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "invalid seek parameter"
    }
  ]
}
